--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: apps/latest
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
   name: boardgame-deployment
